--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^8.1.1",
+    "react-scripts": "5.0.1",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
